--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,20 @@
             <version>2.3.1</version>
         </dependency>
 
+        <!-- SPRING LDAP -->
+        <dependency>
+            <groupId>org.springframework.ldap</groupId>
+            <artifactId>spring-ldap-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.unboundid</groupId>
+            <artifactId>unboundid-ldapsdk</artifactId>
+        </dependency>
+
         <!-- SPRING BOOT ACTUATOR -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
