--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,11 @@
+server:
+  port: 9000
 logging:
   level:
     root: info
     org.springframework.web: info
     org.springframework.security: info
-# use debug to more details
+# H2
 spring:
   h2:
     console:
@@ -17,7 +19,3 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-# jwt
-jwt:
-  private-key: classpath:app.key
-  public-key: classpath:app.pub
